# renacer

./: .cargo-mutants.toml  .clippy.toml  .gitignore  .tarpaulin.toml  CHANGELOG.md  CLUSTER-001-IMPLEMENTATION.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  SEQUENCE-001-IMPLEMENTATION.md  SPRINT20_STATUS.md  SPRINT21_STATUS.md  SPRINT22_STATUS.md  bench.sh  clusters-default.toml  deny.toml  docker-compose-jaeger.yml  docker-compose-test.yml  pmat.toml  renacer-book-prompt.md  roadmap.yaml  tempo-config.yml
.github/workflows/: book.yml  ci.yml
.pmat-metrics/: commit-018eba9-meta.json  commit-1df6f62-meta.json
benches/: README.md  graph_construction.rs  memory_pool.rs  otlp_export.rs  ring_buffer_overhead.rs  syscall_overhead.rs  trueno_db_queries.rs
benches/fixtures/: syscall_heavy  syscall_heavy.rs
book/: book.toml
book/book/: 404.html  introduction.html  print.html  toc.html  toc.js
book/book/advanced/: anomaly-detection.html  call-graphs.html  chaos-testing.html  citl-integration.html  correlation-matrix.html  decision-trace-export.html  distributed-tracing.html  flamegraphs.html  function-profiling.html  hpu-acceleration.html  io-bottlenecks.html  kmeans-clustering.html  machine-learning.html  ml-pipeline.html  model-persistence.html  opentelemetry.html  percentiles.html  performance-optimization.html  post-hoc-anomaly.html  realtime-anomaly.html  regression-detection.html  semantic-equivalence.html  sequence-mining.html  simd-acceleration.html  single-shot-compile.html  statistical-analysis.html  syscall-clustering.html  time-attribution.html  transpiler-integration.html
book/book/appendix/: changelog.html  faq.html  glossary.html  performance-tables.html
book/book/contributing/: chaos-engineering.html  extreme-tdd.html  fuzz-testing.html  mutation-testing.html  property-testing.html  quality-gates.html  red-green-refactor.html  release-process.html  setup.html  tiered-tdd.html  toyota-way.html
book/book/core-concepts/: dwarf-correlation.html  filtering-classes.html  filtering-negation.html  filtering-regex.html  filtering.html  output-formats.html  statistics.html  syscall-tracing.html
book/book/examples/: attach-process.html  debug-compilation.html  debug-performance.html  (+5 more)
book/src/: SUMMARY.md  introduction.md
docs/: SECURITY.md  otlp-integration.md
docs/book/: renacer-complete-guide.md  section52-adaptive-backend.md  sprint37-39-gpu-observability-summary.md  sprint40-unified-tracing-summary.md  sprint44-build-time-assertions.md
docs/qa/: red-team-report.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: HPU-ML-DL-profiling-spec.md  TOYOTA_WAY_REVIEW_RESPONSE.md  deep-strace-rust-wasm-binary-spec.md  enhance-renacer-ml-dl-spec.md  golden-thread-open-telemetry-spec.md  gpu-kernel-tracing-cuda-spec.md  gpu-kernel-tracing-spec.md  gpu-memory-transfer-tracking-spec.md  integration-001-spec.md  integration-tests-sprint32-33-spec.md  performance-optimization-sprint36-spec.md  pmat-improvements-analysis.md  red-team-profile.md  ruchy-tracing-support.md  semantic-equiv-001-spec.md  single-shot-compile-tooling-spec.md  span-context-propagation-spec.md  time-weight-001-spec.md  trueno-integration-spec.md  trueno-tracing-integration-spec.md  unified-tracing-sovereign-ai-spec.md  unwrap-audit-001-spec.md  unwrap-audit-report.md  unwrap-critical-001-spec.md  using-rust-tracing-in-development-spec.md
examples/: build_time_assertions.rs  depyler-monitor.toml  renacer.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filter_parser.rs
proptest-regressions/: syscalls.txt
scripts/: check_regression.ruchy
src/: adaptive_backend.rs  adaptive_sampler.rs  anomaly.rs  anti_patterns.rs  assertion_dsl.rs  assertion_engine.rs  assertion_types.rs  autoencoder.rs  causal_graph.rs  chaos.rs  cli.rs  critical_path.rs  csv_output.rs  cuda_tracer.rs  decision_export.rs  decision_trace.rs  depyler_ingest.rs  dwarf.rs  experiment_span.rs  filter.rs  function_profiler.rs  gpu_tracer.rs  hpu.rs  html_output.rs  isolation_forest.rs  json_output.rs  lamport_clock.rs  lazy_span.rs  lib.rs  main.rs  ml_anomaly.rs  ml_pipeline.rs  model_persistence.rs  otlp_exporter.rs  profiling.rs  ring_buffer.rs  rle_compression.rs  semantic_equivalence.rs  span_pool.rs  span_record.rs  (+9 more)
src/analysis/: anti_pattern.rs  mod.rs
src/cluster/: definition.rs  filter.rs  mod.rs  registry.rs  tests.rs
src/regression/: config.rs  mod.rs  noise_filter.rs  statistics.rs  tests.rs  verdict.rs
src/sequence/: anomaly.rs  mod.rs  ngram.rs  tests.rs
src/time_attribution/: attribution.rs  hotspot.rs  mod.rs  tests.rs
tests/: benchmark_vs_strace.rs  experiment_span_test.rs  property_based_comprehensive.rs  single_shot_compile_integration.rs  sprint13_function_profiling_tests.rs  sprint13_profiling_tests.rs  sprint13_stack_unwinding_tests.rs  sprint15_negation_tests.rs  sprint16_regex_filtering_tests.rs  sprint17_output_format_tests.rs  sprint18_multiprocess_tests.rs  sprint19_enhanced_stats_tests.rs  sprint1_mvp_tests.rs  sprint20_realtime_anomaly_tests.rs  sprint21_hpu_acceleration_tests.rs  sprint22_html_output_tests.rs  sprint22_isolation_forest_tests.rs  sprint23_autoencoder_tests.rs  sprint23_ml_anomaly_tests.rs  sprint24_transpiler_source_map_tests.rs  sprint25_function_name_correlation_tests.rs  sprint26_decision_trace_tests.rs  sprint26_stack_trace_correlation_tests.rs  sprint27_error_correlation_tests.rs  sprint28_decy_integration_tests.rs  sprint30_otlp_export_tests.rs  sprint31_ruchy_integration_tests.rs  sprint32_compute_block_tracing_tests.rs  sprint33_span_context_propagation_tests.rs  sprint34_integration_tests.rs  sprint37_gpu_kernel_tracing_tests.rs  sprint37_gpu_tracer_tests.rs  sprint38_cuda_kernel_tracing_tests.rs  sprint38_cuda_tracer_tests.rs  sprint39_gpu_transfer_tracking_tests.rs  sprint3_full_syscalls_tests.rs  sprint40_lamport_clock_tests.rs  sprint40_ring_buffer_tests.rs  sprint40_trueno_db_tests.rs  sprint41_anti_patterns_tests.rs  (+15 more)
tests/fixtures/: simple_program  simple_program.rs
tests/test_programs/: fork_test  fork_test.c
tests/utils/: mod.rs
(+94 files in other folders)
