[package]
name = "renacer"
version = "0.4.1"
edition = "2021"
authors = ["Pragmatic AI Labs <info@paiml.com>"]
description = "Pure Rust system call tracer with source-aware correlation for Rust binaries"
license = "MIT"
repository = "https://github.com/paiml/renacer"
readme = "README.md"
keywords = ["strace", "tracing", "syscall", "debugging", "profiling"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Ptrace and system calls
nix = { version = "0.29", features = ["ptrace", "process", "signal", "uio"] }
libc = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DWARF debug info parsing
addr2line = "0.24"
gimli = "0.31"
object = "0.37"
memmap2 = "0.9"

# Stack unwinding for function profiling
backtrace = "0.3"

# High-performance SIMD/GPU compute (sister project - published on crates.io)
trueno = "0.4.0"

# Machine learning for anomaly detection (Sprint 23)
aprender = "0.4.1"

# Regex filtering (Sprint 16)
regex = "1.10"

# Random number generation for Isolation Forest (Sprint 22)
rand = "0.8"

# Development tracing/debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

# Property-based testing
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Chaos engineering features (Sprint 29 - Red-Team Profile)
# Following aprender/trueno patterns for feature organization
[features]
default = []

# Tier 1: Fast chaos (resource limits, signal injection)
chaos-basic = []

# Tier 2: Network/IO chaos (latency, packet loss simulation)
chaos-network = ["chaos-basic"]

# Tier 3: Byzantine fault injection (syscall return modification)
chaos-byzantine = ["chaos-network"]

# Full chaos engineering suite
chaos-full = ["chaos-byzantine", "dep:loom", "dep:arbitrary"]

# Fuzz testing support
fuzz = ["dep:arbitrary"]

[dependencies.loom]
version = "0.7"
optional = true

[dependencies.arbitrary]
version = "1.3"
optional = true
features = ["derive"]
